--- a/index.html
+++ b/index.html
@@ -5,13 +5,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>maharaja.com</title>
-    <style> body { border: darkcyan double 5px;} </style>
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color: antiquewhite;" >
+<body>
+
+    <!---------------------------------------------- hero-section --------------------------------------->
+    <div class="container">
+        <div class="header">
+            <div class="header-left">
+                <img id="logo-img" src="images/logo.avif" alt="logo">
+                <p id="logo-text">MAHARAJA</p>
+            </div>
+            <div class="header-right">
+                <ul class="navbar"> 
+                    <li>Home</li>
+                    <li>Menu</li>
+                    <li>Status</li>
+                    <li>About</li>
+                </ul>
+            </div>
+        </div>
+        <div class="slider">
+            <div class="slides">
+                <input type="radio" id="btn1" name="radiobtn"> 
+                <input type="radio" id="btn2" name="radiobtn"> 
+                <input type="radio" id="btn3" name="radiobtn"> 
+                <input type="radio" id="btn4" name="radiobtn"> 
+        
+                <div class="slide first">
+                    <img src="images/6.avif" alt="">
+                </div>
+                <div class="first">
+                    <img src="images/2.avif" alt="">
+                </div>
+                <div class="first">
+                    <img src="images/3.avif" alt="">
+                </div>
+                <div class="first">
+                    <img src="images/4.avif" alt="">
+                </div>
+
+                <div class="navigation-auto">
+                    <div class="auto-btn1"></div>
+                    <div class="auto-btn2"></div>
+                    <div class="auto-btn3"></div>
+                    <div class="auto-btn4"></div>
+                </div>
+
+                <div class="navigation-manual">
+                    <label for="radio1" class="manual-btn"></label>
+                    <label for="radio2" class="manual-btn"></label>
+                    <label for="radio3" class="manual-btn"></label>
+                    <label for="radio4" class="manual-btn"></label>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
     <header style="background-color: darkgray;">
         <center> 
-        <h1>The Maharaja</h1>
+        <h1 style="padding-top: 1000px;">The Maharaja</h1>
         </center>
     </header>
 
