--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
     </div>
 
 
-
+    <div class="second">
+        Hello 
+    </div>
 
     <header style="background-color: darkgray;">
         <h1 style="padding-top: 1000px;">The Maharaja</h1>
