updates on menu table and herosection

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         </div>
         <div class="header-right">
           <ul class="navbar">
-            <li>Home</li>
-            <li>Menu</li>
-            <li>Status</li>
-            <li>About</li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#menu">Menu</a></li>
+            <li><a href="#tables">Status</a></li>
+            <li><a href="">About</a></li>
           </ul>
         </div>
       </div>
@@ -34,16 +34,16 @@
             <input type="radio" id="radio4" name="radio-btn" />
 
             <div class="slide first">
-              <img src="images/6.avif" alt="" />
+              <img src="images/caro1.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="images/2.avif" alt="" />
+              <img src="images/caro2.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="images/3.avif" alt="" />
+              <img src="images/caro3.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="images/4.avif" alt="" />
+              <img src="images/caro4.jpg" alt="" />
             </div>
 
             <div class="navigation-auto">
@@ -53,163 +53,95 @@
               <div class="auto-btn4"></div>
             </div>
 
+        </div>
             <div class="navigation-manual">
               <label for="radio1" class="manual-btn"></label>
               <label for="radio2" class="manual-btn"></label>
               <label for="radio3" class="manual-btn"></label>
               <label for="radio4" class="manual-btn"></label>
             </div>
-          </div>
+          
         </div>
       </div>
     </div>
 
-    <div class="second">Hello</div>
+<!---------------------------------------------- menu-section --------------------------------------->
 
-    <header style="background-color: darkgray">
-      <h1 style="padding-top: 1000px">The Maharaja</h1>
-    </header>
-
-    <div class="topnav">
-      <a class="active" href="#home">Home</a>
-      <a href="#menu">Menu</a>
-      <a href="#status">Status</a>
-      <a href="#about">About</a>
+    <div class="menu" id="menu">
+        <div class="menu-items">
+            <div class="heading-1">
+                Our Menu
+            </div>
+            <div class="subheading">
+                We celebrate simple ingredients and soulful cooking, honoring
+                regional traditions and the many Italian grandmothers who cooked
+                before us. From wide varity of ingredients and cuisines.
+            </div>
+    
+            <div class="menu-link">
+                <a href="menu.html"> Menu Here </a>
+            </div>
+        </div>   
     </div>
 
-    <section>
-      <table>
-        <tr>
-          <td><img src="images/2.avif" alt="" height="290" /></td>
-          <td><img src="images/3.avif" alt="" height="290" /></td>
-          <td><img src="images/4.avif" alt="" height="290" /></td>
-        </tr>
-      </table>
-    </section>
+<!----------------------------------------------table-section --------------------------------------->
 
-    <br />
-
-    <section id="menu">
-      <table>
-        <tr>
-          <td><img src="images/6.avif" alt="" height="435" /></td>
-          <td>
-            <h2>Our Menu</h2>
-            <br />
-            <p>
-              We celebrate simple ingredients and soulful cooking, honoring
-              regional traditions and the many Italian grandmothers who cooked
-              before us.
-            </p>
-            <br />
-            <p>From wide varity of ingredients and cuisines</p>
-            <p class="para">
-              <a
-                style="text-decoration: none; align-items: center"
-                href="menu.html"
-              >
-                MENU
-              </a>
-            </p>
-          </td>
-        </tr>
-      </table>
-    </section>
-
-    <div class="column" id="status">
-      <center>
-        <h2>Table Status</h2>
-      </center>
-      <ul>
-        <li>Book Your table</li>
-        <li>Check Avaibility of Tables</li>
-        <li>Check Your Table status</li>
-      </ul>
+    <div class="tables" id="tables">
+        <div class="table-left">
+            <div class="heading-1">
+                Table Status
+            </div>
+            <div class="content">
+                <ul class="table-content">
+                    <li><a href="">Book Your table</a></li>
+                    <li><a href="">Check Avaibility of Tables</a></li>
+                    <li><a href="">Check Your Table status</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="table-right">
+            <img src="images/table1.jpg" alt="table">
+        </div>
     </div>
+  
+   <!----------------------------------------------order-section --------------------------------------->
 
-    <div class="column">
-      <img src="images/8.avif" alt="" height="435" />
-    </div>
-
-    <br />
-
-    <br />
-
-    <section>
-      <table>
-        <tr>
-          <td><img src="images/9.avif" alt="" height="460" /></td>
-          <td>
-            <center>
-              <h2>Order Food Online</h2>
-            </center>
+    <div class="orders">
+        <div class="heading-1">
+            Order Food Online
+        </div>
+        <div class="order-list">
             <ul>
-              <li>Browse Menu</li>
-              <li>Add Your Food Items</li>
-              <li>View Your Order</li>
-              <li>Confirm Order</li>
-            </ul>
-          </td>
-        </tr>
-      </table>
-    </section>
-
-    <br />
-
-    <article>
-      <center>
-        <h2>Promo Video</h2>
-      </center>
-    </article>
-
-    <div>
-      <center>
-        <video src="videos/maharaja.mp4" height="660" controls>
-          Promo Vedio
-        </video>
-      </center>
+                <li>Browse Menu</li>
+                <li>Add Your Food Items</li>
+                <li>View Your Order</li>
+                <li>Confirm Order</li>
+              </ul>
+        </div>
     </div>
 
-    <br />
+   <!----------------------------------------------about-section --------------------------------------->
 
-    <div>
-      <embed src="audio/Sweet Tone.mp3" type="" hidden="true" />
+    <div class="about">
+        <div class="heading-1">
+            About The Establishment
+        </div>
+        <div class="para">
+            Built with the purpose to serve world's best food with love and care
+        </div>
+        <div class="address">
+            Address : the techie street,south of park hospital,Gurugram,Haryana
+        </div>
+        <div class="maps">
+            <a style="text-decoration: none" href="https://www.google.com/maps/dir/Haleyangadi,+Karnataka/770,+Ground+Floor,+Islampur+Village,+Sector+38,+Gurugram,+Haryana+122001/@20.5544364,65.7198916,5z/data=!3m1!4b1!4m13!4m12!1m5!1m1!1s0x3ba3526285da46ef:0xa13f07f0bf5d6f2f!2m2!1d74.7972185!2d13.0507946!1m5!1m1!1s0x390d192ddd88709b:0x83028b9047b4801!2m2!1d77.040012!2d28.4299324">Click here for the clear directions</a>
+        </div>
+        <div class="membership">
+            <h2>Be a Premium Member :</h2>
+            <a href="form.html"> Fill the form </a>
+        </div>
     </div>
 
-    <article id="about">
-      <center>
-        <h2>About The Establishment</h2>
-      </center>
-    </article>
-
-    <article>
-      <center>
-        <p>
-          Built with the purpose to serve world's best food with love and care
-        </p>
-      </center>
-    </article>
-
-    <p>Address : the techie street,south of park hospital,Gurugram,Haryana</p>
-    <a
-      style="text-decoration: none"
-      href="https://www.google.com/maps/dir/Haleyangadi,+Karnataka/770,+Ground+Floor,+Islampur+Village,+Sector+38,+Gurugram,+Haryana+122001/@20.5544364,65.7198916,5z/data=!3m1!4b1!4m13!4m12!1m5!1m1!1s0x3ba3526285da46ef:0xa13f07f0bf5d6f2f!2m2!1d74.7972185!2d13.0507946!1m5!1m1!1s0x390d192ddd88709b:0x83028b9047b4801!2m2!1d77.040012!2d28.4299324"
-      >Click here for the clear directions</a
-    >
-
-    <br />
-    <hr />
-
-    <center>
-      <h2>Be a Premium Member :</h2>
-    </center>
-
-    <center>
-      <a href="form.html"> Fill the form </a>
-    </center>
-
-    <hr />
-    <br />
+   <!----------------------------------------------Footer-section --------------------------------------->
 
     <footer>
       <p>Follow Us on :</p>
@@ -218,5 +150,17 @@
       <p><img src="images/logo3.jpg" alt="" height="15" /> the_maharaja</p>
     </footer>
     <br />
+
+    <script type="text/javascript">
+        var counter = 1;
+        setInterval(function(){
+            document.getElementById('radio' + counter).checked = true;
+            counter++;
+            if(counter > 4){
+                counter = 1;
+            }
+        },5000);
+    </script>
+
   </body>
 </html>
