updation of orders and about section

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!---------------------------------------------- hero-section --------------------------------------->
-    <div class="container">
-      <div class="header">
+
+    <!------------------ header-section  ----------------->
+
+    <div class="header">
         <div class="header-left">
           <img id="logo-img" src="images/logo.avif" alt="logo" />
           <p id="logo-text">MAHARAJA</p>
@@ -20,10 +21,14 @@
             <li><a href="#">Home</a></li>
             <li><a href="#menu">Menu</a></li>
             <li><a href="#tables">Status</a></li>
-            <li><a href="">About</a></li>
+            <li><a href="#orders">Orders</a></li>
+            <li><a href="#about">About</a></li>
           </ul>
         </div>
       </div>
+    <!---------------------------------------------- hero-section --------------------------------------->
+
+    <div class="container">
 
       <div class="cont">
         <div class="slider">
@@ -52,115 +57,110 @@
               <div class="auto-btn3"></div>
               <div class="auto-btn4"></div>
             </div>
-
-        </div>
-            <div class="navigation-manual">
-              <label for="radio1" class="manual-btn"></label>
-              <label for="radio2" class="manual-btn"></label>
-              <label for="radio3" class="manual-btn"></label>
-              <label for="radio4" class="manual-btn"></label>
-            </div>
-          
+          </div>
+          <div class="navigation-manual">
+            <label for="radio1" class="manual-btn"></label>
+            <label for="radio2" class="manual-btn"></label>
+            <label for="radio3" class="manual-btn"></label>
+            <label for="radio4" class="manual-btn"></label>
+          </div>
         </div>
       </div>
     </div>
 
-<!---------------------------------------------- menu-section --------------------------------------->
+    <!---------------------------------------------- menu-section --------------------------------------->
 
     <div class="menu" id="menu">
-        <div class="menu-items">
-            <div class="heading-1">
-                Our Menu
-            </div>
-            <div class="subheading">
-                We celebrate simple ingredients and soulful cooking, honoring
-                regional traditions and the many Italian grandmothers who cooked
-                before us. From wide varity of ingredients and cuisines.
-            </div>
-    
-            <div class="menu-link">
-                <a href="menu.html"> Menu Here </a>
-            </div>
-        </div>   
+      <div class="menu-items">
+        <div class="heading-1">Our Menu</div>
+        <div class="subheading">
+          We celebrate simple ingredients and soulful cooking, honoring regional
+          traditions and the many Italian grandmothers who cooked before us.
+          From wide varity of ingredients and cuisines.
+        </div>
+
+        <div class="menu-link">
+          <a href="menu.html"> Menu Here </a>
+        </div>
+      </div>
     </div>
 
-<!----------------------------------------------table-section --------------------------------------->
+    <!----------------------------------------------table-section --------------------------------------->
 
     <div class="tables" id="tables">
-        <div class="table-left">
-            <div class="heading-1">
-                Table Status
-            </div>
-            <div class="content">
-                <ul class="table-content">
-                    <li><a href="">Book Your table</a></li>
-                    <li><a href="">Check Avaibility of Tables</a></li>
-                    <li><a href="">Check Your Table status</a></li>
-                </ul>
-            </div>
+      <div class="table-left">
+        <div class="heading-1">Table Status</div>
+        <div class="content">
+          <ul class="table-content">
+            <li><a href="">Book Your table</a></li>
+            <li><a href="">Check Avaibility of Tables</a></li>
+            <li><a href="">Check Your Table status</a></li>
+          </ul>
         </div>
-        <div class="table-right">
-            <img src="images/table1.jpg" alt="table">
-        </div>
-    </div>
-  
-   <!----------------------------------------------order-section --------------------------------------->
-
-    <div class="orders">
-        <div class="heading-1">
-            Order Food Online
-        </div>
-        <div class="order-list">
-            <ul>
-                <li>Browse Menu</li>
-                <li>Add Your Food Items</li>
-                <li>View Your Order</li>
-                <li>Confirm Order</li>
-              </ul>
-        </div>
+      </div>
+      <div class="table-right">
+        <img src="images/table1.jpg" alt="table" />
+      </div>
     </div>
 
-   <!----------------------------------------------about-section --------------------------------------->
+    <!----------------------------------------------order-section --------------------------------------->
 
-    <div class="about">
-        <div class="heading-1">
-            About The Establishment
+    <div class="orders" id="orders">
+      <div class="heading-1">Order Food Online</div>
+      <div class="order-list">
+        <div class="list list1">
+          <a href="">Browse Menu</a>
         </div>
-        <div class="para">
-            Built with the purpose to serve world's best food with love and care
+        <div class="list list2">
+          <a href="">Add Your Food Items</a>
         </div>
-        <div class="address">
-            Address : the techie street,south of park hospital,Gurugram,Haryana
+        <div class="list list3">
+          <a href=""> View Your Order</a>
         </div>
-        <div class="maps">
-            <a style="text-decoration: none" href="https://www.google.com/maps/dir/Haleyangadi,+Karnataka/770,+Ground+Floor,+Islampur+Village,+Sector+38,+Gurugram,+Haryana+122001/@20.5544364,65.7198916,5z/data=!3m1!4b1!4m13!4m12!1m5!1m1!1s0x3ba3526285da46ef:0xa13f07f0bf5d6f2f!2m2!1d74.7972185!2d13.0507946!1m5!1m1!1s0x390d192ddd88709b:0x83028b9047b4801!2m2!1d77.040012!2d28.4299324">Click here for the clear directions</a>
+        <div class="list list4">
+          <a href="">Confirm Order</a>
         </div>
-        <div class="membership">
-            <h2>Be a Premium Member :</h2>
-            <a href="form.html"> Fill the form </a>
-        </div>
+      </div>
     </div>
 
-   <!----------------------------------------------Footer-section --------------------------------------->
+    <!----------------------------------------------about-section --------------------------------------->
 
-    <footer>
-      <p>Follow Us on :</p>
-      <p><img src="images/logo 2.jpg" alt="" height="15" /> themaharaja</p>
-      <p><img src="images/logo1.jpg" alt="" height="15" /> maharajathehotel</p>
-      <p><img src="images/logo3.jpg" alt="" height="15" /> the_maharaja</p>
-    </footer>
-    <br />
+    <div class="about" id="about">
+      <div class="heading-1">About The Establishment</div>
+      <div class="aboutdiv">
+        <div class="about-left">
+          <div class="para">
+            Built with the purpose to serve world's best food with love and
+            care.
+          </div>
+          <div class="membership">
+            <h2><a href="form.html">Be a Premium Member </a></h2>
+          </div>
+        </div>
+
+        <div class="about-right">
+          <div class="address">
+            Address : Plot no 770, Islampur Village, Sector 38, Gurugram, Haryana 122001
+          </div>
+          <div>
+            <iframe  class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15316100.075555874!2d65.60310235128988!3d20.412463222908052!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d192ddd88709b%3A0x83028b9047b4801!2sHotel%20Maharaja%20Palace%20Near%20Medanta%20Hospital%2C%20Hotel%20in%20Sector%2038%20Gurgaon!5e0!3m2!1sen!2sin!4v1715074812883!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!----------------------------------------------Footer-section --------------------------------------->
+
 
     <script type="text/javascript">
-        var counter = 1;
-        setInterval(function(){
-            document.getElementById('radio' + counter).checked = true;
-            counter++;
-            if(counter > 4){
-                counter = 1;
-            }
-        },5000);
+      var counter = 1;
+      setInterval(function () {
+        document.getElementById("radio" + counter).checked = true;
+        counter++;
+        if (counter > 4) {
+          counter = 1;
+        }
+      }, 5000);
     </script>
-
   </body>
 </html>
