--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>maharaja.com</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Maharaja</title>
+    <link rel="icon" type="image/x-icon" href="images/logo.avif">
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
 
@@ -80,7 +81,7 @@
         </div>
 
         <div class="menu-link">
-          <a href="menu.html"> Menu Here </a>
+          <a href="html/menu.html"> Menu Here </a>
         </div>
       </div>
     </div>
@@ -134,7 +135,7 @@
             care.
           </div>
           <div class="membership">
-            <h2><a href="form.html">Be a Premium Member </a></h2>
+            <h2><a href="html/form.html">Be a Premium Member </a></h2>
           </div>
         </div>
 
