--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
       <div class="aboutdiv">
         <div class="about-left">
           <div class="para">
-            Built with the purpose to serve world's best food with love and
-            care.
+            Our mission is to craft culinary experiences that transcend mere sustenance. Infused with love and meticulous care, each dish is an expression of our commitment to serving the finest cuisine. We aspire to delight and nourish, elevating dining to an art form.
           </div>
           <div class="membership">
             <h2><a href="html/form.html">Be a Premium Member </a></h2>
