--- a/html/menu.html
+++ b/html/menu.html
@@ -4,79 +4,108 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MENUS</title>
+    <link rel="icon" type="image/x-icon" href="../images/logo.avif">
+    <link rel="stylesheet" href="../styles/menu.css">
+    <title>Menu card</title>
 </head>
 <body>
-    <header style="background-color: yellow;">
-        <center>
-            <h1>
-                MENU FOR THE MAHARAJA
-            </h1>
-        </center>
-    </header>
-    <table>
-        <tr>
-            <td><img src="images/9.avif" alt="" height="445" ></td>
-            <td><img src="images/7.avif" alt="" height="445"></td>
-        </tr>
-    </table>
-    <hr>
-    <br>
-    <center>
-        <h2>
-            Starters
-        </h2>
-    </center>
-    <ul>
-        <li>Khaman Dhokla Recipe (Nylon Khaman)</li>
-        <li>Rava Dhokla (Sooji Dhokla)</li>
-        <li>Cocktail Samosa (Mini Paneer Samosa)</li>
-        <li>Samosa Chaat</li>
-        <li>Air Fryer Zucchini Chips (Panko Crusted)</li>
-        <li>Batata Vada</li>
-        <li>Bang Bang Cauliflower (Air Fryer)</li>
-        <li>Pani Puri Recipe (Water & Stuffing)</li>
-    </ul>
-    <hr>
-    <br>
-    <center>
-        <h2>
-            Main Course
-        </h2>
-    </center>
-    <ul>
-        <li>Veg Chopsoues</li>
-        <li>Chilly Paneer Gravy </li>  
-        <li> Manchurian Gravy</li>   	
-        <li> Sweet & Sour Veg</li>   
-        <li>Mix. Veg. in Hot Garlic Sauce </li>  
-        <li>Shreded Potatoes in Hot Garlic Sauce</li>    
-    </ul>
-    <hr>
-    <br>
-    <center>
-        <h2>
-            Desserts
-        </h2>
-    </center>
-    <ul>
-        <li>Gulab Jamun</li>
-        <li>Halwa (Seasonal)</li>
-    </ul>
-    <hr>
-    <br>
-    <center>
-        <h2>
-            Snacks
-        </h2>
-    </center>
-    <ul>
-        <li>Hot & Sour</li>
-        <li>Lemon & Coriander</li>    
-        <li> Veg. Noodle Soup</li>   
-        <li>Sweet Corn	</li>    
-        <li>Veg. Munchow</li>    
-        <li> Veg. Clear Soup</li>
-    </ul>
+
+    <!------------------------- header section  --------------------->
+    <div class="heading">
+        MENU FOR THE MAHARAJA
+    </div>
+
+    <!------------------------- menu section  ------------------------>
+
+    <!-- starters  -->
+
+    <div class="nameleft">
+        <div class="nameleft-cont">
+            <div class="nameleft-left">
+                <div class="heading-1">
+                    Starters
+                </div>
+                <ul>
+                    <li>Khaman Dhokla Recipe (Nylon Khaman)</li>
+                    <li>Rava Dhokla (Sooji Dhokla)</li>
+                    <li>Cocktail Samosa (Mini Paneer Samosa)</li>
+                    <li>Samosa Chaat</li>
+                    <li>Air Fryer Zucchini Chips (Panko Crusted)</li>
+                    <li>Batata Vada</li>
+                    <li>Bang Bang Cauliflower (Air Fryer)</li>
+                    <li>Pani Puri Recipe (Water & Stuffing)</li>
+                </ul>
+            </div>
+            <div class="nameleft-right">
+                <img src="../images/menu/starters.jpg" alt="starters">
+            </div>
+        </div>   
+    </div>
+
+    <!-- main course  -->
+
+    <div class="nameright">
+        <div class="nameright-cont">
+            <div class="nameright-left">
+                <img src="../images/menu/main-course.jpg" alt="starters">
+            </div>
+            <div class="nameright-right">
+                <div class="heading-1">
+                    Main Course
+                </div>
+                <ul>
+                    <li>Veg Chopsoues</li>
+                    <li>Chilly Paneer Gravy </li>  
+                    <li>Manchurian Gravy</li>   	
+                    <li>Sweet & Sour Veg</li>   
+                    <li>Mix. Veg. in Hot Garlic Sauce </li>  
+                    <li>Shreded Potatoes in Hot Garlic Sauce</li>    
+                </ul>
+            </div>
+        </div>   
+    </div>
+
+    <!-- Desserts  -->
+
+    <div class="nameleft">
+        <div class="nameleft-cont">
+            <div class="nameleft-left">
+                <div class="heading-1">
+                    Desserts
+                </div>
+                <ul>
+                    <li>Gulab Jamun</li>
+                    <li>Halwa (Seasonal)</li>
+                </ul>
+            </div>
+            <div class="nameleft-right">
+                <img src="../images/menu/dessets.jpg" alt="starters">
+            </div>
+        </div>   
+    </div>
+
+    <!-- snacks  -->
+
+    <div class="nameright">
+        <div class="nameright-cont">
+            <div class="nameright-left">
+                <img src="../images/menu/snacks.jpg" alt="starters">
+            </div>
+            <div class="nameright-right">
+                <div class="heading-1">
+                    Snacks
+                </div>
+                <ul>
+                    <li>Hot & Sour</li>
+                    <li>Lemon & Coriander</li>    
+                    <li> Veg. Noodle Soup</li>   
+                    <li>Sweet Corn	</li>    
+                    <li>Veg. Munchow</li>    
+                    <li> Veg. Clear Soup</li>
+                </ul>
+            </div>
+        </div>   
+    </div>
+
 </body>
 </html>
