--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
             <input type="radio" id="radio4" name="radio-btn" />
 
             <div class="slide first">
-              <img src="images/caro1.jpg" alt="" />
+              <img src="images/index/caro1.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="images/caro2.jpg" alt="" />
+              <img src="images/index/caro2.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="images/caro3.jpg" alt="" />
+              <img src="images/index/caro3.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="images/caro4.jpg" alt="" />
+              <img src="images/index/caro4.jpg" alt="" />
             </div>
 
             <div class="navigation-auto">
@@ -100,7 +100,7 @@
         </div>
       </div>
       <div class="table-right">
-        <img src="images/table1.jpg" alt="table" />
+        <img src="images/index/table1.jpg" alt="table" />
       </div>
     </div>
 
