table booking page creation

--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
     <div class="tables" id="tables">
       <div class="table-left">
         <div class="heading-1">Table Status</div>
+        <div class="para1">
+          "Curious about your table's status? Let us keep you informed. Whether you're eagerly awaiting your reservation or simply checking in, we're here to ensure your dining experience is seamless. Check the current status of your table below."
+        </div>
         <div class="content">
-          <ul class="table-content">
-            <li><a href="">Book Your table</a></li>
-            <li><a href="">Check Avaibility of Tables</a></li>
-            <li><a href="">Check Your Table status</a></li>
-          </ul>
+          <a href="html/book.html">Book Your table</a>
+          <a href="">Check Your Table status</a>
         </div>
       </div>
       <div class="table-right">
