--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Maharaja</title>
     <link rel="icon" type="image/x-icon" href="images/logo.avif">
     <link rel="stylesheet" href="styles/style.css" />
+    <meta property="og:title" content=Best Restaurant in Delhi-NCR, The maharaja>
+    <meta property="og:site_name" content=The Maharaja Hotel>
+    <meta property="og:url" content=https://themaharaja.netlify.app/>
+    <meta property="og:description" content=One of the best restaurant located in Delhi-NCR region that provides veg and delicious food to its customer. Visit us today.>
+    <meta property="og:type" content=restaurant>
+    <meta property="og:image" content=https://themaharaja.netlify.app/images/index/table1.jpg>
   </head>
   <body>
 
