--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content=https://themaharaja.netlify.app/>
     <meta property="og:description" content=One of the best restaurant located in Delhi-NCR region that provides veg and delicious food to its customer. Visit us today.>
     <meta property="og:type" content=restaurant>
-    <meta property="og:image" content=https://themaharaja.netlify.app/images/index/table1.jpg>
+    <meta property="og:image" content=https://images.pexels.com/photos/1458457/pexels-photo-1458457.jpeg?auto=compress&cs=tinysrgb&w=600>
   </head>
   <body>
 
